<resources>
    <string name="app_name">EnglishWords</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">старт</string>
    <string name="help">подсказка</string>
    <string name="repeat">на повторение</string>
    <string name="I_know">уже знаю</string>
    <string name="Next">следующее</string>
    <string name="Translate">Перевод</string>
    <string name="correct">верно</string>
    <string name="mistake">ошибка</string>

    <string name="start_learning">Нажмите кнопку (старт) для изучения слов</string>
</resources>
