<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue_500"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_count"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mistake"
            android:gravity="left"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/tv_mistakes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"

            />
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct"
            android:gravity="right"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/tv_correctly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="0"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
           />
    </LinearLayout>

    <TextView
        android:id="@+id/Tv_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_learning"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="italic"
         />

    <TextView
        android:id="@+id/Tv_helper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:visibility="gone"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        />
    <EditText
        android:id="@+id/editText_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone"
        android:minEms="3"
        android:cursorVisible="false"
        android:hint="@string/Translate"
        android:textColor="@color/black"
        android:paddingTop="16dp"
        android:inputType="textNoSuggestions"/>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_start"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:background="@drawable/btn_style"
            android:text="@string/start"

            />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/Next"
            android:visibility="gone"
            android:layout_weight="0.5"/>


    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:baselineAligned="false">
        <Button
            android:id="@+id/btn_Repeat"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.33"
            android:textSize="10sp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="2dp"
            android:textColor="@color/white"
            android:background="@drawable/btn_style"
            android:text="@string/repeat"/>
        <Button
            android:id="@+id/btn_I_know"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.33"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/btn_style"
            android:text="@string/I_know"/>
        <Button
            android:id="@+id/btn_Help"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.33"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_style"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="4dp"
            android:text="@string/help"/>

    </LinearLayout>
<com.lorentzos.flingswipe.SwipeFlingAdapterView
    android:id="@+id/tinder_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    />
</LinearLayout>
